; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_emit_diff_symbol.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_emit_diff_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_options = type { i64 }
%struct.emitted_diff_symbol = type { i8*, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.diff_options*, i32, i8*, i32, i32)* @emit_diff_symbol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_diff_symbol(%struct.diff_options* %0, i32 %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.diff_options*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.emitted_diff_symbol, align 8
  store %struct.diff_options* %0, %struct.diff_options** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = getelementptr inbounds %struct.emitted_diff_symbol, %struct.emitted_diff_symbol* %11, i32 0, i32 0
  %13 = load i8*, i8** %8, align 8
  store i8* %13, i8** %12, align 8
  %14 = getelementptr inbounds %struct.emitted_diff_symbol, %struct.emitted_diff_symbol* %11, i32 0, i32 1
  %15 = load i32, i32* %9, align 4
  store i32 %15, i32* %14, align 8
  %16 = getelementptr inbounds %struct.emitted_diff_symbol, %struct.emitted_diff_symbol* %11, i32 0, i32 2
  %17 = load i32, i32* %10, align 4
  store i32 %17, i32* %16, align 4
  %18 = getelementptr inbounds %struct.emitted_diff_symbol, %struct.emitted_diff_symbol* %11, i32 0, i32 3
  store i32 0, i32* %18, align 8
  %19 = getelementptr inbounds %struct.emitted_diff_symbol, %struct.emitted_diff_symbol* %11, i32 0, i32 4
  store i32 0, i32* %19, align 4
  %20 = getelementptr inbounds %struct.emitted_diff_symbol, %struct.emitted_diff_symbol* %11, i32 0, i32 5
  %21 = load i32, i32* %7, align 4
  store i32 %21, i32* %20, align 8
  %22 = load %struct.diff_options*, %struct.diff_options** %6, align 8
  %23 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %5
  %27 = load %struct.diff_options*, %struct.diff_options** %6, align 8
  %28 = call i32 @append_emitted_diff_symbol(%struct.diff_options* %27, %struct.emitted_diff_symbol* %11)
  br label %32

29:                                               ; preds = %5
  %30 = load %struct.diff_options*, %struct.diff_options** %6, align 8
  %31 = call i32 @emit_diff_symbol_from_struct(%struct.diff_options* %30, %struct.emitted_diff_symbol* %11)
  br label %32

32:                                               ; preds = %29, %26
  ret void
}

declare dso_local i32 @append_emitted_diff_symbol(%struct.diff_options*, %struct.emitted_diff_symbol*) #1

declare dso_local i32 @emit_diff_symbol_from_struct(%struct.diff_options*, %struct.emitted_diff_symbol*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
